added initial layout, methods and intents
*added 6 activities
*added 6 layouts
*added basic styles
*need to refactor and improve on all items above
*rudimentary MVP exists
modified:   app/src/main/AndroidManifest.xml
modified:   app/src/main/java/com/example/android/musicalstructure/MainActivity.java
new file:   app/src/main/java/com/example/android/musicalstructure/NowPlayingActivity.java
new file:   app/src/main/java/com/example/android/musicalstructure/PreferencesActivity.java
new file:   app/src/main/java/com/example/android/musicalstructure/RecommendationsActivity.java
new file:   app/src/main/java/com/example/android/musicalstructure/TicketsActivity.java
new file:   app/src/main/java/com/example/android/musicalstructure/TrendingActivity.java
modified:   app/src/main/res/layout/activity_main.xml
new file:   app/src/main/res/layout/activity_now_playing.xml
new file:   app/src/main/res/layout/activity_preferences.xml
new file:   app/src/main/res/layout/activity_recommedations.xml
new file:   app/src/main/res/layout/activity_tickets.xml
new file:   app/src/main/res/layout/activity_trending.xml
modified:   app/src/main/res/values/colors.xml
new file:   app/src/main/res/values/dimens.xml/dimens.xml
modified:   app/src/main/res/values/strings.xml
modified:   app/src/main/res/values/styles.xml

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="#64B5F6"
     tools:context="com.example.android.musicalstructure.MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/now_playing"
+        android:text="@string/now_playing"
+        android:background="#9FA8DA"
+        style="@style/CommonTextView"/>
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/preferences"
+        android:text="@string/music_preferences"
+        android:background="#7986CB"
+        style="@style/CommonTextView"/>
+
+    <TextView
+        android:id="@+id/recommendations"
+        android:text="@string/recommendations"
+        android:background="#5C6BC0"
+        style="@style/CommonTextView"/>
+
+    <TextView
+        android:id="@+id/trending"
+        android:text="@string/trending"
+        android:background="#3F51B5"
+        style="@style/CommonTextView"/>
+    <TextView
+        android:id="@+id/tickets"
+        android:text="@string/tickets"
+        android:background="#303F95"
+        style="@style/CommonTextView"/>
+
+</LinearLayout>
