--- a/app/src/main/res/layout/activity_preferences.xml
+++ b/app/src/main/res/layout/activity_preferences.xml
@@ -4,23 +4,23 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:background="#212121"
-        android:text="Pop"
+        android:background="@color/colorBlack"
+        android:text="@string/pop"
         style="@style/CommonTextView"/>
 
     <TextView
-        android:background="#212121"
-        android:text="Rock"
+        android:background="@color/colorBlack"
+        android:text="@string/rock"
         style="@style/CommonTextView"/>
 
     <TextView
-        android:background="#212121"
-        android:text="Jazz"
+        android:background="@color/colorBlack"
+        android:text="@string/jazz"
         style="@style/CommonTextView"/>
 
     <TextView
-        android:background="#212121"
-        android:text="Classical"
+        android:background="@color/colorBlack"
+        android:text="@string/classical"
         style="@style/CommonTextView"/>
 
 </LinearLayout>
