--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,36 +4,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#64B5F6"
+    android:background="@color/colorPrimaryMinusFour"
     tools:context="com.example.android.musicalstructure.MainActivity">
 
     <TextView
         android:id="@+id/now_playing"
         android:text="@string/now_playing"
-        android:background="#9FA8DA"
+        android:background="@color/colorPrimaryMinusOne"
         style="@style/CommonTextView"/>
 
     <TextView
         android:id="@+id/preferences"
         android:text="@string/music_preferences"
-        android:background="#7986CB"
+        android:background="@color/colorPrimaryMinusOne"
         style="@style/CommonTextView"/>
 
     <TextView
         android:id="@+id/recommendations"
         android:text="@string/recommendations"
-        android:background="#5C6BC0"
+        android:background="@color/colorPrimaryMinusOne"
         style="@style/CommonTextView"/>
 
     <TextView
         android:id="@+id/trending"
         android:text="@string/trending"
-        android:background="#3F51B5"
+        android:background="@color/colorPrimaryMinusOne"
         style="@style/CommonTextView"/>
     <TextView
         android:id="@+id/tickets"
         android:text="@string/tickets"
-        android:background="#303F95"
+        android:background="@color/colorPrimaryMinusOne"
         style="@style/CommonTextView"/>
 
 </LinearLayout>
