--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#E91E63</color>
-    <color name="colorPrimaryDark">#C2185B</color>
-    <color name="colorAccent">#F50057</color>
+    <color name="colorPrimary">#F44336</color>
+    <color name="colorPrimaryDark">#D32f2f</color>
+    <color name="colorAccent">#FF1744</color>
+    <color name="colorBackground">#ffebEE</color>
+    <color name="colorPrimaryMinusOne">#EF5350</color>
+    <color name="colorPrimaryMinusTwo">#E57373</color>
+    <color name="colorPrimaryMinusThree">#EF9A9A</color>
+    <color name="colorPrimaryMinusFour">#FFCDD2</color>
+    <color name="colorPrimaryMinusFive">#FFEBEE</color>
+    <color name="colorBlack">#212121</color>
 </resources>
