--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,7 @@
         <item name="android:textSize">24sp</item>
         <item name="android:textColor">#ffffff</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:layout_marginBottom">24dp</item>
         <item name="android:layout_gravity">center_vertical</item>
     </style>
 </resources>
