added dimen res file to centralize dimensions

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,37 +3,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/colorPrimaryMinusFour"
+    android:orientation="vertical"
     tools:context="com.example.android.musicalstructure.MainActivity">
 
     <TextView
         android:id="@+id/now_playing"
-        android:text="@string/now_playing"
-        android:background="@color/colorPrimaryMinusOne"
-        style="@style/CommonTextView"/>
+        style="@style/CommonTextView"
+        android:text="@string/now_playing" />
 
     <TextView
         android:id="@+id/preferences"
-        android:text="@string/music_preferences"
-        android:background="@color/colorPrimaryMinusOne"
-        style="@style/CommonTextView"/>
+        style="@style/CommonTextView"
+        android:text="@string/music_preferences" />
 
     <TextView
         android:id="@+id/recommendations"
-        android:text="@string/recommendations"
-        android:background="@color/colorPrimaryMinusOne"
-        style="@style/CommonTextView"/>
+        style="@style/CommonTextView"
+        android:text="@string/recommendations" />
 
     <TextView
         android:id="@+id/trending"
-        android:text="@string/trending"
-        android:background="@color/colorPrimaryMinusOne"
-        style="@style/CommonTextView"/>
+        style="@style/CommonTextView"
+        android:text="@string/trending" />
+
     <TextView
         android:id="@+id/tickets"
-        android:text="@string/tickets"
-        android:background="@color/colorPrimaryMinusOne"
-        style="@style/CommonTextView"/>
+        style="@style/CommonTextView"
+        android:text="@string/tickets" />
 
 </LinearLayout>
