--- a/app/src/main/res/layout/activity_recommedations.xml
+++ b/app/src/main/res/layout/activity_recommedations.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimaryMinusFour"
+    android:orientation="vertical">>
 
     <TextView
-        android:background="@color/colorBlack"
-        android:text="@string/pop"
-        style="@style/CommonTextView"/>
+        style="@style/CommonTextView"
+        android:text="@string/pop" />
 
     <TextView
-        android:background="@color/colorBlack"
-        android:text="@string/rock"
-        style="@style/CommonTextView"/>
+        style="@style/CommonTextView"
+        android:text="@string/rock" />
 
 </LinearLayout>
