--- a/app/src/main/res/layout/activity_trending.xml
+++ b/app/src/main/res/layout/activity_trending.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimaryMinusFour"
+    android:orientation="vertical">>
 
     <TextView
-        android:background="@color/colorBlack"
-        android:text="@string/now"
-        style="@style/CommonTextView"/>
+        style="@style/CommonTextView"
+        android:text="@string/now" />
 
     <TextView
-        android:background="@color/colorBlack"
-        android:text="@string/last_week"
-        style="@style/CommonTextView"/>
+        style="@style/CommonTextView"
+        android:text="@string/last_week" />
 
     <TextView
-        android:background="@color/colorBlack"
-        android:text="@string/last_month"
-        style="@style/CommonTextView"/>
+        style="@style/CommonTextView"
+        android:text="@string/last_month" />
 
 </LinearLayout>
