--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="colorPrimaryMinusFour">#FFCDD2</color>
     <color name="colorPrimaryMinusFive">#FFEBEE</color>
     <color name="colorBlack">#212121</color>
+    <color name="colorWhite">#ffffff</color>
 </resources>
