added button and listener on NowPlayingActivity"
*general cleanup and formatting
*added button on activity_now_playing.xml to display activity_tickets.xml when clicked

modified:   app/src/main/java/com/example/android/musicalstructure/MainActivity.java
modified:   app/src/main/java/com/example/android/musicalstructure/NowPlayingActivity.java
modified:   app/src/main/java/com/example/android/musicalstructure/PreferencesActivity.java
modified:   app/src/main/java/com/example/android/musicalstructure/RecommendationsActivity.java
modified:   app/src/main/java/com/example/android/musicalstructure/TicketsActivity.java
modified:   app/src/main/java/com/example/android/musicalstructure/TrendingActivity.java
modified:   app/src/main/res/layout/activity_now_playing.xml
modified:   app/src/main/res/values/dimens.xml
modified:   app/src/main/res/values/strings.xml

--- a/app/src/main/res/layout/activity_now_playing.xml
+++ b/app/src/main/res/layout/activity_now_playing.xml
@@ -5,6 +5,7 @@
     android:background="@color/colorPrimaryMinusFour"
     android:orientation="vertical">
 
+
     <TextView
         style="@style/CommonTextView"
         android:text="@string/this_songs_lyrics" />
@@ -20,5 +21,12 @@
     <TextView
         style="@style/CommonTextView"
         android:text="@string/artists_facebook_page" />
+
+    <Button
+        android:id="@+id/ticket_button"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/ticket_button_height"
+        android:text="@string/purchase_ticket"
+        android:layout_gravity="center_horizontal"/>
 
 </LinearLayout>
